CH1481: Fix the alignment of the menu on mobile

--- a/web/themes/custom/bevan/sass/components/_footer.scss
+++ b/web/themes/custom/bevan/sass/components/_footer.scss
@@ -37,6 +37,9 @@ $tablet: 768px;
     margin-left: govuk-px-to-rem(115px);
     padding-right: govuk-px-to-rem(15px);
     display: inline-block;
+    @media only screen and (max-width: $tablet) {
+      margin-left: 0;
+    }
   }
   ul {
     list-style: none;
